@@ -1,8 +1,7 @@
-SCTK Basic Installation for Version 2.3.9
-=========================================
+SCTK Basic Installation for Version 2.3.10
+==========================================
 
-To install compile and install sctk, from the main directory
-type the commands:
+To install compile and install sctk, from the main directory type the commands:
 
 	% make config
 	% make all
@@ -10,28 +9,25 @@ type the commands:
 	% make install
 	% make doc
 
-The 'make config' command executes the script 'config.sh' in the
-src/sclite directory and initialized the makefiles in the rest of the
-src directories.  
+The 'make config' command executes the script 'config.sh' in the src/sclite 
+directory and initialized the makefiles in the rest of the src directories.  
 
-You can specify installation directory by changing the 'PREFIX'
-variable in the 'src/makefile' file.  By default, all executables will
-be installed in 'bin' of this directory.  Be sure to add the
-installation directory to your PATH variable in order to accesss the
-programs.
+You can specify installation directory by changing the 'PREFIX' variable in the 
+'src/makefile' file.  By default, all executables will be installed in 'bin' of 
+this directory.  Be sure to add the installation directory to your PATH variable 
+in order to accesss the programs.
 
-The 'make all' command will compile all toolkit executables and
-libraries.  Compilation of rfilter1 may fail if your version of libC
-is very new because it now includes the strcmp* family of functions.
-You can use the libC versions, and avoid compilation complaints, by
-following the isntrcutions in 'src/rfilter1/makefile'.
+The 'make all' command will compile all toolkit executables and libraries.
+Compilation of rfilter1 may fail if your version of libC is very new because it 
+now includes the strcmp* family of functions. You can use the libC versions, and
+ avoid compilation complaints, by following the isntrcutions in 
+ 'src/rfilter1/makefile'.
 
-The 'make check' will perform self tests on the toolkit.  Please
-report any problems to Jon Fiscus at NIST with any bug reports or
-comments at the email address jonathan.fiscus@nist.gov or by phone,
-(+1) (301) 975-3182.  Please include the version number and any other
-relevant information such as OS, compiler, etc.
+The 'make check' will perform self tests on the toolkit.  Please report any 
+problems to Jon Fiscus at NIST with any bug reports or comments at the email 
+address jonathan.fiscus@nist.gov or by phone, (+1) (301) 975-3182.  Please 
+include the version number and any other relevant information such as OS, 
+compiler, etc.
 
-The 'make install' command will copy the executables to $PREFIX, (See
-make config above.)
-
+The 'make install' command will copy the executables to $PREFIX, (See make 
+config above.)
