@@ -1,6 +1,6 @@
 File:  README
-Date:  March 5th, 2009
-SCTK Version: 2.3.9
+Date:  March 6th, 2009
+SCTK Version: 2.3.10
 
 asclite compression algorithm update.
 
@@ -37,9 +37,9 @@ Linux Version 2.6.19.fc5                      2.2.0 - 2.2.4
 Linux Version 2.6.9-5.EL (gcc 3.4.6-3)        2.2.0 - 2.2.4
 Darwin Version 7.4.0                          1.3
 Darwin Version 8.5.0 (gcc v4.0.1 build 5367)  2.1.2 - 2.3-rc1 
-Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 - 2.3.9
-Darwin Version 9.6.0 (gcc v4.0.1 build 5490)  2.3.6 - 2.3.9
-RedHat Fedora 9 (gcc v4.3.0-8)                2.3.9
+Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 - 2.3.10
+Darwin Version 9.6.0 (gcc v4.0.1 build 5490)  2.3.6 - 2.3.10
+RedHat Fedora 9 (gcc v4.3.0-8)                2.3.9 - 2.3.10
 
  * compiled with warning messages, but successful self test
 ** compiled and ran, but test6, which uses GNU's diff for alignment fails.  The 
