@@ -38,7 +38,6 @@
 #include <algorithm>
 
 #include "lzma/LzmaLib.h"
-#include "tools.h"
 
 using namespace std;
 
