@@ -1,3 +1,6 @@
+SCTK Version 2.3.10 - Release March 6, 2009
+  [*] Fixed tests
+
 SCTK Version 2.3.9 - Release March 5, 2009
   [*] Compile with gcc 4.3.
 
